security/kyverno-policies/base/policy-allowed-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-image-registries
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: restrict-image-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - istio-system
              names:
                - "cm-acme-http-solver-*"

          # Exception pour Policy Reporter
          - resources:
              kinds:
                - Pod
              namespaces:
                - policy-reporter

      validate:
        message: "Only Artifact Registry images are allowed."
        pattern:
          spec:
            containers:
              - image: "europe-west1-docker.pkg.dev/*"
