security/kyverno-policies/base/policy-disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "An image tag is required."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "*:*"

    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using the 'latest' tag is not allowed."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "!*:latest"
