security/kyverno-policies/base/policy-require-security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-security-context
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-container-security-context
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must define a secure securityContext."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
                  readOnlyRootFilesystem: true
